Adicionado mais um parágrafo

--- a/site/index.html
+++ b/site/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <h2>Que saudade de HTML!</h2>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem alias voluptas nemo quidem consectetur fuga sit iure, aliquid cupiditate at et exercitationem earum soluta eaque? Iure rem vitae minus sed!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem consectetur aut aspernatur debitis dolorem laborum deserunt beatae eum natus veniam quos doloremque perferendis, omnis earum iste sit, quia incidunt.</p>
 </body>
 </html>
