--- a/site/index.html
+++ b/site/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HIHEHEHA</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Olá, Mundo!</h1>
-    <h2>Que saudade de HTML!</h2>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem alias voluptas nemo quidem consectetur fuga sit iure, aliquid cupiditate at et exercitationem earum soluta eaque? Iure rem vitae minus sed!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem consectetur aut aspernatur debitis dolorem laborum deserunt beatae eum natus veniam quos doloremque perferendis, omnis earum iste sit, quia incidunt.</p>
-</body>
+    <div>
+        <h1>Olá, Mundo!</h1>
+        <h2>Que saudade de HTML!</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem alias voluptas nemo quidem consectetur fuga sit iure, aliquid cupiditate at et exercitationem earum soluta eaque? Iure rem vitae minus sed!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem consectetur aut aspernatur debitis dolorem laborum deserunt beatae eum natus veniam quos doloremque perferendis, omnis earum iste sit, quia incidunt.</p>
+    </div>
+    </body>
 </html>
